--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -12,6 +12,7 @@
             height: 100%;
             background-color: #0b0c10;
             min-height: 100vh;
+            align-items: center;
         }
         
         header {
@@ -341,6 +342,7 @@
             .image {
                 margin: 100px;
                 margin-bottom: 0px;
+                margin-top: 20px;
             }
             .image .gamb {
                 height: 250px;
