--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -49,13 +49,13 @@
         
         header .menu a {
             position: relative;
-            margin: 0 20px;
+            margin: 0 15px;
             text-decoration: none;
             color: #FFFFFF;
-            font-weight: 600;
+            font-weight: 500;
             transition: 0.6s;
             font-family: 'Montserrat';
-            font-size: 18px;
+            font-size: 17px;
             display: inline-block;
         }
         
@@ -279,6 +279,33 @@
             font-size: 25px;
         }
         
+        .ki {
+            margin-top: 50px;
+            margin-bottom: 0px;
+            position: relative;
+            display: inline-block;
+            color: #FFFFFF;
+            text-decoration: none;
+            font-size: 20px;
+            font-family: 'Montserrat';
+            text-transform: uppercase;
+            font-weight: 500;
+            width: auto;
+            padding: 20px;
+            padding-left: 40px;
+            padding-right: 40px;
+            background: linear-gradient(100deg, #FF725E, #FF725E);
+            border-radius: 6px;
+            transition: 0.6s;
+        }
+        
+        .ki:hover {
+            box-shadow: inset 240px 0 0 0 #FFFFFF;
+            cursor: pointer;
+            color: #343D46;
+            transition: 0.6s;
+        }
+        
         @media screen and (max-width:1349px) {
             .job {
                 font-size: 30px;
@@ -299,6 +326,12 @@
             .image .gamb {
                 height: 355px;
                 width: 355px;
+            }
+            .ki {
+                font-size: 17px;
+                padding: 16px;
+                padding-left: 40px;
+                padding-right: 40px;
             }
         }
         
@@ -351,6 +384,12 @@
             .homedat {
                 text-align: center;
             }
+            .ki {
+                font-size: 15px;
+                padding: 15px;
+                padding-left: 35px;
+                padding-right: 35px;
+            }
         }
         
         @media screen and (max-width:680px) {
@@ -374,6 +413,12 @@
             .homedat {
                 font-size: 10px;
             }
+            .ki {
+                font-size: 15px;
+                padding: 15px;
+                padding-left: 32px;
+                padding-right: 32px;
+            }
         }
         
         @media screen and (max-width:545px) {
@@ -396,6 +441,12 @@
             }
             .homedat {
                 font-size: 10px;
+            }
+            .ki {
+                font-size: 12px;
+                padding: 12px;
+                padding-left: 28px;
+                padding-right: 28px;
             }
         }
         /*---------------------------------------------------*/
@@ -440,8 +491,9 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 4rem;
-            padding-top: 70px;
+            padding-top: 10px;
             margin: 100px;
+            margin-top: 30px;
         }
         
         .containerexp div {
@@ -554,6 +606,7 @@
             }
             .sk {
                 font-size: 35px;
+                padding-top: 60px;
             }
             .blabl {
                 font-size: 15px;
@@ -639,7 +692,6 @@
             }
             .sk {
                 text-decoration: none;
-                padding-top: 40px;
                 font-family: 'Montserrat';
                 font-weight: 700;
                 font-size: 25px;
@@ -687,6 +739,8 @@
             max-width: 1200px;
             position: relative;
             margin: 100px;
+            margin-top: 50px;
+            padding-top: 10px;
         }
         
         .wrapper i {
