--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -78,7 +78,7 @@
             height: 60px;
         }
         
-        @media screen and (max-width:1280px) {
+        @media screen and (max-width: 1280px) {
             header .menu a {
                 font-size: 17px;
             }
@@ -148,7 +148,6 @@
             }
             header .menu {
                 position: fixed;
-                background: url(/HomePage/AssetHome/asuasua.png);
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
@@ -204,6 +203,13 @@
             display: flex;
         }
         
+        .homecont {
+            max-width: 1800px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
         .homedat {
             text-decoration: none;
             font-family: 'Montserrat';
@@ -235,16 +241,15 @@
             }
         }
         
-        .image {
+        .home .image {
             display: flex;
             margin: 100px;
-            margin-left: 70px;
             opacity: 0;
             transform: translateY(20px);
             animation: fadeIn 1s ease-in-out forwards;
         }
         
-        .image .gamb {
+        .homecont .image .gamb {
             width: 400px;
             height: 400px;
         }
@@ -306,36 +311,36 @@
             transition: 0.6s;
         }
         
-        @media screen and (max-width:1349px) {
+        @media screen and (max-width: 1368px) {
             .job {
-                font-size: 30px;
+                font-size: 28px;
             }
             .job1 {
-                font-size: 30px;
+                font-size: 28px;
             }
             .desc {
                 font-weight: 300;
-                font-size: 20px;
+                font-size: 18px;
             }
             .name {
-                font-size: 50px;
+                font-size: 48px;
             }
             .homedat {
-                font-size: 20px;
+                font-size: 18px;
             }
-            .image .gamb {
+            .homecont .image .gamb {
                 height: 355px;
                 width: 355px;
             }
             .ki {
-                font-size: 17px;
-                padding: 16px;
+                font-size: 15px;
+                padding: 14px;
                 padding-left: 40px;
                 padding-right: 40px;
             }
         }
         
-        @media screen and (max-width:1258px) {
+        @media screen and (max-width: 1258px) {
             .job {
                 font-size: 25px;
             }
@@ -352,7 +357,7 @@
             .homedat {
                 font-size: 15px;
             }
-            .image .gamb {
+            .homecont.image .gamb {
                 height: 300px;
                 width: 300px;
             }
@@ -364,8 +369,12 @@
             }
         }
         
-        @media screen and (max-width:980px) {
+        @media screen and (max-width: 1060px) {
             .home {
+                display: flex;
+                flex-direction: column-reverse;
+            }
+            .homecont {
                 display: flex;
                 flex-direction: column-reverse;
             }
@@ -377,7 +386,7 @@
                 margin-bottom: 0px;
                 margin-top: 40px;
             }
-            .image .gamb {
+            .homecont .image .gamb {
                 height: 250px;
                 width: 250px;
             }
@@ -392,8 +401,8 @@
             }
         }
         
-        @media screen and (max-width:680px) {
-            .image .gamb {
+        @media screen and (max-width: 680px) {
+            .homecont .image .gamb {
                 height: 200px;
                 width: 200px;
             }
@@ -421,8 +430,8 @@
             }
         }
         
-        @media screen and (max-width:545px) {
-            .image .gamb {
+        @media screen and (max-width: 545px) {
+            .homecont .image .gamb {
                 height: 150px;
                 width: 150px;
             }
@@ -547,6 +556,13 @@
             .sk {
                 font-size: 35px;
             }
+            .containerexp {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+            }
+            .home3 .project .judpro {
+                font-size: 35px;
+            }
             .blabl {
                 font-size: 20px;
             }
@@ -561,7 +577,7 @@
             }
         }
         
-        @media screen and (max-width:1024px) {
+        @media screen and (max-width: 1024px) {
             .containerexp {
                 grid-template-columns: 1fr;
             }
@@ -575,7 +591,7 @@
                 align-items: center;
             }
             .sk {
-                font-size: 40px;
+                font-size: 35px;
             }
             .blabl {
                 font-size: 20px;
@@ -591,45 +607,21 @@
             }
         }
         
-        @media screen and (max-width:900) {
-            .containerexp {
-                grid-template-columns: 1fr;
-            }
-            .containerexp div {
-                padding: 1.5rem;
-                margin: auto;
-                width: 90%;
-            }
-            .expcont {
-                padding: 0rem;
-                align-items: center;
-            }
-            .sk {
-                font-size: 35px;
-                padding-top: 60px;
-            }
-            .blabl {
-                font-size: 15px;
-            }
-        }
-        
-        @media screen and (max-width:520px) {
+        @media screen and (max-width: 900px) {
             .containerexp {
                 gap: 2rem;
-                grid-template-columns: 1fr;
+                grid-template-columns: 2fr;
             }
             .containerexp div {
                 padding: 2rem 1rem;
                 width: 100%;
             }
             .expcont {
-                padding: 0rem;
                 align-items: center;
             }
             .expdet {
                 display: flex;
-                align-items: center;
-                padding-left: 15px;
+                padding-right: 0px;
             }
             .containerexp div h3 {
                 text-align: center;
@@ -645,6 +637,13 @@
                 font-weight: 300;
                 font-size: 11px;
             }
+            .expfer,
+            .expbe {
+                height: auto;
+            }
+            .home3 .project .judpro {
+                font-size: 30px;
+            }
             .sk {
                 font-size: 30px;
             }
@@ -653,7 +652,7 @@
             }
         }
         
-        @media screen and (max-width:400px) {
+        @media screen and (max-width:520px) {
             .containerexp {
                 gap: 2rem;
                 grid-template-columns: 2fr;
@@ -689,6 +688,69 @@
             .expfer,
             .expbe {
                 height: auto;
+            }
+            .home3 .project .judpro {
+                font-size: 25px;
+            }
+            .sk {
+                text-decoration: none;
+                font-family: 'Montserrat';
+                font-weight: 700;
+                font-size: 25px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+            .blabl {
+                text-decoration: none;
+                font-family: 'Montserrat';
+                font-weight: 500;
+                font-size: 10px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+        }
+        
+        @media screen and (max-width: 400px) {
+            .containerexp {
+                gap: 2rem;
+                grid-template-columns: 2fr;
+            }
+            .containerexp div {
+                padding: 2rem 1rem;
+                width: 100%;
+            }
+            .expcont {
+                align-items: center;
+            }
+            .expdet {
+                display: flex;
+                padding-right: 0px;
+            }
+            .expdet .ico {
+                margin-top: 10px;
+            }
+            .containerexp div h3 {
+                text-align: center;
+                font-weight: 500;
+                font-size: 15px;
+                margin-bottom: 1rem;
+            }
+            .containerexp div h4 {
+                font-weight: 500;
+                font-size: 12px;
+            }
+            .containerexp div small {
+                font-weight: 300;
+                font-size: 9px;
+            }
+            .expfer,
+            .expbe {
+                height: auto;
+            }
+            .home3 .project .judpro {
+                font-size: 25px;
             }
             .sk {
                 text-decoration: none;
@@ -739,7 +801,7 @@
             max-width: 1200px;
             position: relative;
             margin: 100px;
-            margin-top: 50px;
+            margin-top: 30px;
             padding-top: 10px;
         }
         
@@ -819,5 +881,113 @@
             }
             .wrapper {
                 margin: 10px;
+                margin-top: 30px;
+            }
+        }
+        
+        .home4 {
+            min-height: 100vh;
+            width: 100%;
+            font-family: 'Montserrat';
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .timel {
+            position: relative;
+            max-width: 1200px;
+            margin: 100px auto;
+            align-items: center;
+        }
+        
+        h1 {
+            color: #FFFFFF;
+            align-items: center;
+        }
+        
+        .conts {
+            padding: 10px 50px;
+            position: relative;
+            width: 50%;
+            animation: movedown 1s linear forwards;
+            opacity: 0;
+        }
+        
+        @keyframes movedown {
+            0% {
+                opacity: 1;
+                transform: translateY(-30px)
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
+        
+        .conts:nth-child(3) {
+            animation-delay: 1s;
+        }
+        
+        .conts:nth-child(3) {
+            animation-delay: 1s;
+        }
+        
+        .boks {
+            padding: 20px 30px;
+            background: #343D46;
+            position: relative;
+            border-radius: 6px;
+            font-size: 18px;
+            color: #ffffff;
+        }
+        
+        .left-conts {
+            right: 0;
+        }
+        
+        .right-conts {
+            left: 50%;
+        }
+        
+        .timel::after {
+            content: '';
+            position: absolute;
+            width: 6px;
+            height: 100%;
+            background: #FFFFFF;
+            left: 50%;
+            top: 0;
+            margin-left: -3px;
+            z-index: -1;
+            animation: moveline 3s linear forwards;
+        }
+        
+        @keyframes moveline {
+            0% {
+                height: 0;
+            }
+            100% {
+                height: 100%;
+            }
+        }
+        
+        @media screen and (max-width: 850px) {
+            .timel {
+                margin: 50px auto;
+            }
+            .timel::after {
+                left: 31px;
+            }
+            .conts {
+                width: 100%;
+                padding-left: 80px;
+                padding-right: 25px;
+            }
+            .boks {
+                font-size: 13px;
+            }
+            .right-conts {
+                left: 0%;
             }
         }
