--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -431,9 +431,13 @@
         }
         
         @media screen and (max-width: 545px) {
+            .homecont .image {
+                margin-bottom: 50px;
+                margin-top: 70px;
+            }
             .homecont .image .gamb {
-                height: 150px;
-                width: 150px;
+                height: 190px;
+                width: 190px;
             }
             .job {
                 font-size: 20px;
