--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -286,18 +286,25 @@
             font-size: 25px;
         }
         
+        .LnkeSocial {
+            margin-top: 40px;
+            margin-bottom: 100px;
+        }
+        
         .ki {
-            margin-top: 50px;
+            margin-top: 15px;
             margin-bottom: 0px;
             position: relative;
             display: inline-block;
             color: #FFFFFF;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 15px;
             font-family: 'Montserrat';
             text-transform: uppercase;
             font-weight: 500;
-            width: auto;
+            text-align: center;
+            min-width: 210px;
+            max-width: 210px;
             padding: 20px;
             padding-left: 40px;
             padding-right: 40px;
@@ -392,10 +399,16 @@
             .homedat {
                 text-align: center;
             }
+            .LnkeSocial {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             .ki {
                 font-size: 15px;
                 padding: 15px;
                 padding-left: 35px;
+                max-width: 200px;
                 padding-right: 35px;
             }
         }
@@ -517,6 +530,22 @@
             text-align: center;
             justify-content: center;
             transition: .6s;
+        }
+        
+        .social-menu ul li ion-icon {
+            position: relative;
+            margin-top: 10px;
+            width: 40px;
+            height: 40px;
+            border-radius: 40%;
+            text-align: center;
+            color: #0b0c10;
+            justify-content: center;
+            transition: .6s;
+        }
+        
+        .social-menu ul li ion-icon:hover {
+            color: #FFFFFF;
         }
         
         .social-menu ul li a:hover {
@@ -881,7 +910,7 @@
         /*---------------------------------------------------*/
         
         .home3 {
-            padding: 30px;
+            margin: 30px;
             padding-bottom: 100px;
             align-items: center;
             position: relative;
@@ -906,7 +935,7 @@
             display: flex;
             max-width: 1200px;
             position: relative;
-            margin: 100px;
+            margin: 40px;
             margin-top: 30px;
             padding-top: 10px;
         }
@@ -985,10 +1014,10 @@
         
         @media screen and (max-width: 550px) {
             .carousel img {
-                width: 100%;
+                width: 95%;
             }
             .wrapper {
-                margin: 10px;
+                margin: 20px;
                 margin-top: 30px;
             }
         }
@@ -1007,10 +1036,12 @@
         /* ------------------------------------------------------- */
         
         .home4 {
-            min-height: auto;
-            width: 100%;
-            font-family: 'Montserrat';
+            padding: 30px;
+            padding-top: 70px;
+            padding-bottom: 100px;
             align-items: center;
+            position: relative;
+            justify-content: space-around;
             display: flex;
             flex-direction: column;
         }
@@ -1125,5 +1156,124 @@
             }
             .right-conts {
                 left: 0%;
+            }
+        }
+        /* ................................. */
+        
+        .footer {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            justify-content: center;
+            min-height: 100vh;
+        }
+        
+        footer {
+            position: relative;
+            width: auto;
+            background: #2a2f3c;
+            min-height: 100px;
+            padding: 20px 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        
+        footer .sociali,
+        footer .menu {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 10px 0;
+        }
+        
+        footer .sociali li,
+        footer .menu li {
+            list-style: none;
+        }
+        
+        footer .sociali li a {
+            font-size: 2em;
+            color: #fff;
+            margin: 0 10px;
+            display: inline-block;
+            transition: 0.6s;
+        }
+        
+        footer .menu li a {
+            font-size: 18px;
+            color: #fff;
+            margin: 0 8px;
+            display: inline-block;
+            transition: 0.6s;
+            font-family: 'Montserrat';
+            font-weight: 500;
+            text-decoration: none;
+        }
+        
+        footer .menu li a:hover {
+            transform: translateY(-4px);
+        }
+        
+        footer p {
+            color: #c5c6c7;
+            text-align: center;
+            margin-top: 27.5px;
+            margin-bottom: 10px;
+            font-size: 13px;
+            font-family: 'Montserrat';
+        }
+        
+        footer .sociali li a:hover {
+            transform: translateY(-4px);
+        }
+        
+        .kis {
+            margin-top: 15px;
+            margin-bottom: 0px;
+            position: relative;
+            display: inline-block;
+            color: #FFFFFF;
+            text-decoration: none;
+            font-size: 15px;
+            font-family: 'Montserrat';
+            text-transform: uppercase;
+            font-weight: 500;
+            text-align: center;
+            min-width: 210px;
+            max-width: 210px;
+            padding: 20px;
+            padding-left: 40px;
+            padding-right: 40px;
+            background: linear-gradient(100deg, #FF725E, #FF725E);
+            border-radius: 6px;
+            transition: 0.6s;
+        }
+        
+        .kis:hover {
+            box-shadow: inset 240px 0 0 0 #FFFFFF;
+            cursor: pointer;
+            color: #343D46;
+            transition: 0.6s;
+        }
+        
+        .sociali .LnkeSocials a .kis {
+            margin: 15px;
+        }
+        
+        @media screen and (max-width: 400px) {
+            footer p {
+                font-size: 11px;
+            }
+            footer .menu li a {
+                font-size: 14px;
+                color: #fff;
+                margin: 0 8px;
+                display: inline-block;
+                transition: 0.6s;
+                font-family: 'Poppins', sans-serif;
+                text-decoration: none;
             }
         }
