--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -275,8 +275,9 @@
             font-size: 35px;
         }
         
-        .job1 {
-            font-size: 35px;
+        .jo {
+            font-size: 32px;
+            color: #FFFFFF;
         }
         
         .desc {
@@ -344,6 +345,9 @@
                 padding-left: 40px;
                 padding-right: 40px;
             }
+            .jo {
+                font-size: 25px;
+            }
         }
         
         @media screen and (max-width: 1258px) {
@@ -372,6 +376,9 @@
             }
             .home1 {
                 margin-right: 70px;
+            }
+            .jo {
+                font-size: 22px;
             }
         }
         
@@ -444,6 +451,9 @@
                 padding-left: 32px;
                 padding-right: 32px;
             }
+            .jo {
+                font-size: 17px;
+            }
         }
         
         @media screen and (max-width: 545px) {
@@ -456,17 +466,20 @@
                 width: 190px;
             }
             .job {
-                font-size: 20px;
+                font-size: 18px;
             }
             .job1 {
-                font-size: 20px;
+                font-size: 18px;
             }
             .desc {
                 font-weight: 300;
                 font-size: 10px;
             }
             .name {
-                font-size: 30px;
+                font-size: 28px;
+            }
+            .jo {
+                font-size: 15px;
             }
             .homedat {
                 font-size: 10px;
