--- a/HomePage/editocc.css
+++ b/HomePage/editocc.css
@@ -14,6 +14,9 @@
             min-height: 100vh;
             align-items: center;
         }
+        /* .container {
+            overflow: hidden;
+        } */
         
         header {
             z-index: 999;
